feat(18) granted authorities extractor